[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Grinder.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/GearGrinder300/GearGrinder3000.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/GearGrinder300/GG300_leftAtack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/GearGrinder300/GG3000_D_U.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/EnemyHealthUnder.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/EnemyHealth.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Shadow.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "Dead"
length = 4.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=2]

length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Idle"
length = 2.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 7 ]
}

[sub_resource type="Animation" id=4]

length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]

length = 4.0
loop = false
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider/Shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]

length = 4.0
loop = false
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider/Shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]

length = 4.0
loop = false
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider/Shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]

length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10.6279, 10 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 39.8092, 47.0572 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 57.0542, 68.5652 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 19.4311, 20.9686 )

[node name="Grinder" type="KinematicBody2D" index="0" groups=[
"enemies",
]]

position = Vector2( 0, -10 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprites" type="Node2D" parent="." index="0"]

position = Vector2( 0, -32 )

[node name="1" type="Sprite" parent="Sprites" index="0"]

position = Vector2( 0, -27 )
texture = ExtResource( 2 )
vframes = 2
hframes = 8
_sections_unfolded = [ "Animation", "Material", "Offset", "Visibility", "Z Index" ]

[node name="2" type="Sprite" parent="Sprites" index="1"]

visible = false
position = Vector2( 5.9476, -5.23343 )
texture = ExtResource( 3 )
hframes = 5
_sections_unfolded = [ "Animation", "Material", "Offset", "Visibility", "Z Index" ]

[node name="3" type="Sprite" parent="Sprites" index="2"]

visible = false
texture = ExtResource( 4 )
vframes = 2
hframes = 5
frame = 5
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "Up"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 8.0
anims/Dead = SubResource( 1 )
anims/Down = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Left = SubResource( 4 )
anims/PunchDown = SubResource( 5 )
anims/PunchLeft = SubResource( 6 )
anims/PunchUp = SubResource( 7 )
anims/Up = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Shape" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 2.29096, 0.186645 )
scale = Vector2( 3.70602, 2.42204 )
shape = SubResource( 9 )

[node name="DamageCollider" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="DamageCollider" index="0"]

position = Vector2( 1.17495, -36.8634 )
scale = Vector2( 0.880224, 1 )
shape = SubResource( 10 )

[node name="AttackCollider" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="AttackCollider" index="0"]

position = Vector2( 1, -34.5472 )
scale = Vector2( 1, 1.03559 )
shape = SubResource( 11 )
disabled = true

[node name="HealthBar" type="TextureProgress" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -23.0
margin_top = -101.0
margin_right = 17.0
margin_bottom = -61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 5 )
texture_over = null
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Radar" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar" index="0"]

position = Vector2( -13.5791, -10.1375 )
scale = Vector2( 30.8352, 20.2098 )
shape = SubResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( -2.8517, -0.0836993 )
scale = Vector2( 1.27088, -3.35489 )
z_index = -1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]

[connection signal="area_entered" from="AttackCollider" to="." method="_on_attack_hit"]

[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]


